# vs1003-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci_checks.yml
demo/: Cargo.toml  README.md  memory.x
demo/.cargo/: config.toml
demo/src/: main.rs
driver/: Cargo.toml  README.md
driver/src/: lib.rs
pac/: Cargo.toml  README.md
pac/src/: lib.rs
src/: lib.rs  main.rs
