[package]
edition = "2021"
name = "demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Bartosz Grabias"]
publish = false

[dependencies]
vs1003-driver = { path = "../driver", features = ["defmt-03"] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0", default-features = false, features = [
    "defmt-03",
] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.9"
thiserror = { version = "2.0.9", default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
device-driver = { version = "1.0.2", default-features = false, features = [
    "defmt-03",
    "dsl",
] }
embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
critical-section = "1.2.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
fugit = { version = "0.3.7", features = ["defmt"] }

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

[features]
default = ["defmt-03"]
defmt-03 = []
