[package]
name = "vs1003-driver"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Bartosz Grabias"]
categories = ["embedded", "no-std", "hardware-support"]
description = "VS1003 audio codec device driver"

[features]
"defmt-03" = [
    "dep:defmt",
    "embedded-hal/defmt-03",
    "vs1003-pac/defmt-03",
    "fugit/defmt",
]

[dependencies]
defmt = { version = "0.3", default-features = false, optional = true }
embedded-hal = { version = "1.0.0", default-features = false }
fugit = { version = "0.3.7", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
vs1003-pac = { path = "../pac", version = "0.1.0" }
