[package]
name = "vs1003-pac"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Bartosz Grabias"]
categories = ["embedded", "no-std", "hardware-support"]
description = "VS1003 audio codec peripheral access crate"
repository = "https://github.com/enbyted/vs1003-rs"

[features]
defmt-03 = [
    "dep:defmt",
    "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03",
    "device-driver/defmt-03",
]

[dependencies]
embedded-hal = { version = "1.0.0", default-features = false }
thiserror = { version = "2.0.9", default-features = false }

defmt = { version = "0.3", optional = true, default-features = false }
embedded-hal-async = { version = "1.0.0", default-features = false }
device-driver = { version = "1.0.2", default-features = false, features = [
    "dsl",
] }
